Add 3.7: Phonebook backend step7

--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -11,7 +11,8 @@
   "author": "Tarek Hiemstra",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.0"
