--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
