--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
     "static": "^2.0.0"
   },
