--- a/part3/phonebook-backend/package.json
+++ b/part3/phonebook-backend/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.12",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.1",
     "static": "^2.0.0"
   },
