--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -1,12 +1,12 @@
 {
   "name": "bloglist",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Application that allows users to save information about interesting blogs they have stumbled across on the internet.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "watch": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "lint": "node_modules/.bin/eslint .",
     "lint:fix": "node_modules/.bin/eslint . --fix"
   },
@@ -21,6 +21,10 @@
   },
   "devDependencies": {
     "eslint": "^6.7.2",
+    "jest": "^24.9.0",
     "nodemon": "^2.0.1"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
