--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bloglist",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Application that allows users to save information about interesting blogs they have stumbled across on the internet.",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.7.13"
   },
   "devDependencies": {
