--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
-    "eslint-plugin-jest": "^23.1.1"
+    "eslint-plugin-jest": "^23.1.1",
+    "eslint-plugin-react-hooks": "^2.3.0"
   }
 }
