--- a/part6/redux-anecdotes/package.json
+++ b/part6/redux-anecdotes/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.1",
+    "json-server": "^0.15.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.3",
@@ -10,6 +12,7 @@
     "redux": "^4.0.1"
   },
   "scripts": {
+    "server": "json-server -p3001 db.json",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
